--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(ParamFlag)
 export(ParamInt)
 export(ParamReal)
 export(ParamSetFlat)
-export(ParamUntyped)
+export(ParamUnstorage.typed)
 export(trafo.10exp)
 export(trafo.2exp)
 export(trafo.exp)
