always allow inf for upper/lower real

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(ParamInt)
 export(ParamReal)
 export(ParamSetFlat)
 export(ParamUnstorage.typed)
+export(collectionHelper)
+export(createCollectionParamList)
 export(trafo.10exp)
 export(trafo.2exp)
 export(trafo.exp)
