--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,13 +11,8 @@ export(ParamSetFlat)
 export(ParamUnstorage.typed)
 export(collectionHelper)
 export(createCollectionParamList)
-export(trafo.10exp)
-export(trafo.2exp)
-export(trafo.exp)
-export(trafo.getdict)
-export(trafo.getfun)
-export(trafo.log)
 import(BBmisc)
 import(checkmate)
 import(data.table)
 importFrom(R6,R6Class)
+importFrom(utils,head)
