--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ r:
 r_github_packages:
   - jimhester/covr
 
+before_script:
+  - R --no-save <<< 'library("devtools"); document()'
+
 after_success:
   - if [[ "${TRAVIS_R_VERSION_STRING}" == "release" ]]; then Rscript -e 'covr::coveralls()'; fi
 
