--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Imports:
 Suggests:
     knitr,
     rmarkdown,
-    testthat
+    testthat,
+    roxygen2
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
