checking and building

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,14 +1,23 @@
-todo-files
-man-roxygen
-^.*tar.gz$
-.gitignore
 .github
+.gitignore
 .Rproj.user
 .travis.yml
-README.md
-^.editorconfig$
-^appveyor\.yml$
 ^.*\.Rproj$
-^\.Rproj\.user$
-^.*\.sublime-workspace$
 ^.*\.sublime-project$
+^.*\.sublime-workspace$
+^.*tar.gz$
+^.+_cache$
+^.+_files$
+^.editorconfig$
+^\.Rproj\.user$
+^_pkgdown\.yml$
+^appveyor\.yml$
+^docs$
+^README-.*\.png$
+^README\.Rmd$
+^vignettes/.+\.html$
+appveyor.yml
+man-roxygen
+README.md
+README.Rmd
+todo-files
