--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,10 +15,13 @@ environment:
     USE_RTOOLS: true
   matrix:
     - R_VERSION: devel
+      PKGTYPE: source
+      
     - R_VERSION: release
     # - R_VERSION: oldrel
     #  RTOOLS_VERSION: 32
       CRAN: http://cran.rstudio.com
+
 
 build_script:
   - travis-tool.sh install_deps
