--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,8 @@ export(ParamInt)
 export(ParamReal)
 export(ParamSetFlat)
 export(ParamUntyped)
-export(collectionHelper)
-export(createCollectionParamList)
+export(repeatParam)
+export(trafoOnRepeatedParam)
 import(BBmisc)
 import(checkmate)
 import(data.table)
