add ParamTree doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,17 @@
 
 S3method("[",OptPath)
 S3method(as.data.frame,OptPath)
+export()
 export(OptPath)
 export(ParamCategorical)
 export(ParamFlag)
+export(ParamHandle)
 export(ParamInt)
 export(ParamReal)
 export(ParamSetFlat)
+export(ParamTree)
 export(ParamUntyped)
+export(ParamVisitor)
 export(repeatParam)
 export(trafoOnRepeatedParam)
 import(BBmisc)
