update doc and namespace and description

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 S3method("[",OptPath)
 S3method(as.data.frame,OptPath)
-export()
 export(OptPath)
 export(ParamCategorical)
 export(ParamFlag)
@@ -11,6 +10,8 @@ export(ParamInt)
 export(ParamReal)
 export(ParamSetFlat)
 export(ParamTree)
+export(ParamTreeDn)
+export(ParamTreeFac)
 export(ParamUntyped)
 export(ParamVisitor)
 export(repeatParam)
