vignettes for ParamSetTree

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(ParamHandle)
 export(ParamInt)
 export(ParamReal)
 export(ParamSetFlat)
-export(ParamTree)
+export(ParamSetTree)
 export(ParamTreeDn)
 export(ParamTreeFac)
 export(ParamUntyped)
