rename clean up

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,10 @@ export(ParamInt)
 export(ParamReal)
 export(ParamSetFlat)
 export(ParamSetTree)
-export(ParamTreeDn)
 export(ParamTreeFac)
 export(ParamUntyped)
 export(ParamVisitor)
+export(makeCondTreeNode)
 export(repeatParam)
 export(trafoOnRepeatedParam)
 import(BBmisc)
