--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Suggests:
     knitr,
     rmarkdown,
     testthat,
-    roxygen2
+    roxygen2,
+    plyr
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
