--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ParamSetTree)
 export(ParamTreeFac)
 export(ParamUntyped)
 export(ParamVisitor)
+export(addDep)
 export(makeCondTreeNode)
 export(repeatParam)
 export(trafoOnRepeatedParam)
