add to recursive generation to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(ParamUntyped)
 export(ParamVisitor)
 export(addDep)
 export(makeCondTreeNode)
+export(recursiveParaFac)
 export(repeatParam)
 export(trafoOnRepeatedParam)
 import(BBmisc)
