remove funtions that should not be exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,9 @@ export(ParamInt)
 export(ParamReal)
 export(ParamSetFlat)
 export(ParamSetTree)
-export(ParamTreeFac)
 export(ParamUntyped)
 export(ParamVisitor)
-export(addDep)
-export(makeCondTreeNode)
-export(recursiveParaFac)
+export(keras_helper)
 export(repeatParam)
 export(trafoOnRepeatedParam)
 import(BBmisc)
