--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(ParamSetFlat)
 export(ParamSetTree)
 export(ParamUntyped)
 export(ParamVisitor)
+export(addDep)
 export(keras_helper)
 export(repeatParam)
 export(trafoOnRepeatedParam)
