--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ export(ParamInt)
 export(ParamReal)
 export(ParamSetFlat)
 export(ParamSetTree)
+export(ParamSetTreeRe)
 export(ParamUntyped)
-export(ParamVisitor)
 export(addDep)
 export(keras_helper)
 export(repeatParam)
