--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: phng
 Type: Package
-Title: Define Parameter Spaces, generate Designs and check feasibilities
+Title: Define Parameter Spaces, Generate Designs and Check Feasibilities
 Version: 0.1
 Authors@R: c(
-    person("Jakob", "Richter", NULL, "jakob1richter@gmail.com", role = c("cre", "aut")),
+    person("Jakob", "Richter", NULL, "code@jakob-r.de", role = c("cre", "aut")),
     person("Xudong", "Sun", NULL, "smilesun.east@gmail.com", role = c("aut")),
     person("Michel", "Lang", NULL, "michellang@gmail.com", role = c("aut")),
     person("Bernd", "Bischl", NULL, "bernd_bischl@gmx.de", role = c("aut"))
