--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(ParamCategorical)
 export(ParamFlag)
 export(ParamInt)
 export(ParamReal)
-export(ParamSetFlat)
+export(ParamSet)
 export(ParamUntyped)
 export(repeatParam)
 export(trafoOnRepeatedParam)
