--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(ParamReal)
 export(ParamSet)
 export(ParamUntyped)
 export(repeatParam)
-export(trafoOnRepeatedParam)
+export(trafo_on_repeated_param)
 import(BBmisc)
 import(checkmate)
 import(data.table)
