--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ParamInt)
 export(ParamReal)
 export(ParamSet)
 export(ParamUntyped)
+export(design_to_list)
 export(repeatParam)
 export(trafo_on_repeated_param)
 import(BBmisc)
