selectively import BBmisc functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,11 @@ export(ParamUntyped)
 export(design_to_list)
 export(repeatParam)
 export(trafo_on_repeated_param)
-import(BBmisc)
 import(checkmate)
 import(data.table)
+importFrom(BBmisc,vcapply)
+importFrom(BBmisc,viapply)
+importFrom(BBmisc,vlapply)
+importFrom(BBmisc,vnapply)
 importFrom(R6,R6Class)
 importFrom(utils,head)
