--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ export(repeatParam)
 export(trafo_on_repeated_param)
 import(checkmate)
 import(data.table)
+import(mlr3misc)
 importFrom(R6,R6Class)
 importFrom(utils,head)
