introduce generate_design_lhs and generate_design_grid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ParamReal)
 export(ParamSet)
 export(ParamUntyped)
 export(design_to_list)
+export(generate_design_grid)
 export(repeatParam)
 export(trafo_on_repeated_param)
 import(checkmate)
