rename ParamReal --> ParamFloat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ S3method(as.data.frame,OptPath)
 export(OptPath)
 export(ParamCategorical)
 export(ParamFlag)
+export(ParamFloat)
 export(ParamInt)
-export(ParamReal)
 export(ParamSet)
 export(ParamUntyped)
 export(design_to_list)
