rename ParamFlag --> ParamBool

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 S3method("[",OptPath)
 S3method(as.data.frame,OptPath)
 export(OptPath)
+export(ParamBool)
 export(ParamCateg)
-export(ParamFlag)
 export(ParamFloat)
 export(ParamInt)
 export(ParamSet)
