rename param objects as dicussed in issue #60

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 S3method("[",OptPath)
 S3method(as.data.frame,OptPath)
 export(OptPath)
-export(ParamBool)
-export(ParamCateg)
-export(ParamFloat)
+export(ParamDbl)
+export(ParamFct)
 export(ParamInt)
+export(ParamLgl)
 export(ParamSet)
 export(ParamUntyped)
 export(design_to_list)
