fix r check problems

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(ParamSet)
 export(ParamUntyped)
 export(design_to_list)
 export(generate_design_grid)
+export(generate_design_lhs)
 export(repeatParam)
 export(trafo_on_repeated_param)
 import(checkmate)
