Revert "selectively import from data.table to avoid name clashes"
This reverts commit 96dcc71b05178eb54b0a9cfa65a968b676843e7b.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,8 @@ export(generate_design_grid)
 export(generate_design_lhs)
 export(trafo_on_repeated_param)
 import(checkmate)
+import(data.table)
 import(mlr3misc)
 importFrom(R6,R6Class)
-importFrom(data.table,as.data.table)
-importFrom(data.table,data.table)
-importFrom(data.table,setnames)
 importFrom(utils,head)
 importFrom(utils,tail)
