do not import transpose from data.table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(generate_design_grid)
 export(generate_design_lhs)
 export(trafo_on_repeated_param)
 import(checkmate)
-import(data.table)
+import(data.table, except = transpose)
 import(mlr3misc)
 importFrom(R6,R6Class)
 importFrom(utils,head)
