Untyped -> Uty (like intended?)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(ParamFct)
 export(ParamInt)
 export(ParamLgl)
 export(ParamSet)
-export(ParamUntyped)
+export(ParamUty)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(trafo_on_repeated_param)
