make sure empty paramset works

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,5 +13,6 @@ import(checkmate)
 import(data.table, except = transpose)
 import(mlr3misc)
 importFrom(R6,R6Class)
+importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,tail)
