--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(ParamSet)
 export(ParamUty)
 export(generate_design_grid)
 export(generate_design_lhs)
+export(generate_design_random)
 export(trafo_on_repeated_param)
 import(checkmate)
 import(data.table, except = transpose)
