fix docs + namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ import(checkmate)
 import(data.table, except = transpose)
 import(mlr3misc)
 importFrom(R6,R6Class)
+importFrom(stats,runif)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,tail)
