--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ParamDbl)
 export(ParamFct)
 export(ParamInt)
 export(ParamLgl)
+export(ParamSet)
 export(ParamUty)
 export(generate_design_grid)
 export(generate_design_lhs)
