repair small buggs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(ParamInt)
 export(ParamLgl)
 export(ParamSet)
 export(ParamUty)
+export(Parameter)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
