--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,19 @@ export(ParamInt)
 export(ParamLgl)
 export(ParamSet)
 export(ParamUty)
+export(Sampler)
+export(Sampler1D)
+export(Sampler1DDblNorm)
+export(Sampler1DDblUnif)
+export(Sampler1DFct)
+export(Sampler1DIntUnif)
+export(Sampler1DRfun)
+export(SamplerJointIndep)
+export(SamplerUnif)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
+export(new_sampler_1d_unif)
 import(checkmate)
 import(data.table, except = transpose)
 import(mlr3misc)
