--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,16 +13,14 @@ export(ParamUty)
 export(Sampler)
 export(Sampler1D)
 export(Sampler1DDblNorm)
-export(Sampler1DDblUnif)
 export(Sampler1DFct)
-export(Sampler1DIntUnif)
 export(Sampler1DRfun)
+export(Sampler1DUnif)
 export(SamplerJointIndep)
 export(SamplerUnif)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
-export(new_sampler_1d_unif)
 import(checkmate)
 import(data.table, except = transpose)
 import(mlr3misc)
