--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,9 @@ export(ParamSet)
 export(ParamUty)
 export(Sampler)
 export(Sampler1D)
-export(Sampler1DDblNorm)
-export(Sampler1DFct)
+export(Sampler1DCateg)
 export(Sampler1DRfun)
+export(Sampler1DTruncNorm)
 export(Sampler1DUnif)
 export(SamplerJointIndep)
 export(SamplerUnif)
