export param asserts and clean up more

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(Sampler1DTruncNorm)
 export(Sampler1DUnif)
 export(SamplerJointIndep)
 export(SamplerUnif)
+export(assert_param)
+export(assert_paramset)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
