--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: paradox
 Type: Package
-Title: Define and Document Parameter Spaces, Generate Designs and Check Feasibilities
+Title: Define and work with parameter spaces for complex algorithms
 Version: 0.1
 Authors@R: c(
     person("Jakob", "Richter", NULL, "code@jakob-r.de", role = c("cre", "aut")),
@@ -8,9 +8,11 @@ Authors@R: c(
     person("Michel", "Lang", NULL, "michellang@gmail.com", role = c("aut")),
     person("Bernd", "Bischl", NULL, "bernd_bischl@gmx.de", role = c("aut"))
     )
-Description: A successor of the ParamHelpers Package.
-    Easily define parameter spaces and generate LHS and random designs from it.
-    Check parameter values for feasibility.
+Description:
+  Easily define parameter spaces, constraints and dependencies for
+  arbitrary algorithms, to program on such spaces.
+  Statistical designs and random samplers can be constructed.
+  paradox is a successor of the ParamHelpers package.
 License: GPL-2
 URL: https://github.com/mlr-org/paradox
 BugReports: https://github.com/mlr-org/paradox/issues
