--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(as.data.table,Param)
 S3method(as.data.table,ParamSet)
+export(CondAnyOf)
+export(CondEqual)
 export(Condition)
 export(Dependency)
 export(Param)
@@ -21,8 +23,6 @@ export(SamplerJointIndep)
 export(SamplerUnif)
 export(assert_param)
 export(assert_paramset)
-export(cond_anyof)
-export(cond_equal)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
