--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(Sampler1DCateg)
 export(Sampler1DRfun)
 export(Sampler1DTruncNorm)
 export(Sampler1DUnif)
+export(SamplerHierachical)
 export(SamplerJointIndep)
 export(SamplerUnif)
 export(assert_param)
