Param, export NO_DEF stuff, some tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(CondAnyOf)
 export(CondEqual)
 export(Condition)
 export(Dependency)
+export(NO_DEF)
+export(NoDefault)
 export(Param)
 export(ParamDbl)
 export(ParamFct)
