--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,11 @@
 
 S3method(as.data.table,Param)
 S3method(as.data.table,ParamSet)
-S3method(transpose,paradox_design)
 export(CondAnyOf)
 export(CondEqual)
 export(Condition)
 export(Dependency)
+export(Design)
 export(Param)
 export(ParamDbl)
 export(ParamFct)
@@ -28,7 +28,6 @@ export(assert_paramset)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
-export(transpose)
 import(checkmate)
 import(data.table, except = transpose)
 import(mlr3misc)
