fix some stuff in collection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(ParamFct)
 export(ParamInt)
 export(ParamLgl)
 export(ParamSet)
+export(ParamSetCollection)
 export(ParamUty)
 export(Sampler)
 export(Sampler1D)
