--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,6 @@
-pandoc: '2.2'
-pkgdown: 1.3.0.9000
-pkgdown_sha: 2f40b4769ea9ad2312aa4cc93f27ab116461543b
-articles: []
+pandoc: 2.0.6
+pkgdown: 1.1.0
+pkgdown_sha: ~
+articles:
+  paradox: paradox.html
 
