--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.0.6
-pkgdown: 1.1.0
-pkgdown_sha: ~
+pkgdown: 1.3.0.9000
+pkgdown_sha: 36225ba775f4a5ee9fea4e83cbd64fac71b17da8
 articles:
   paradox: paradox.html
 
