SamplerHierarchical: fix typo in class name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,7 @@ export(Sampler1DCateg)
 export(Sampler1DRfun)
 export(Sampler1DTruncNorm)
 export(Sampler1DUnif)
-export(SamplerHierachical)
+export(SamplerHierarchical)
 export(SamplerJointIndep)
 export(SamplerUnif)
 export(assert_param)
