rename Sampler1DTruncNorm to Sampler1DNormal and allow unbounded params

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,8 @@ export(ParamUty)
 export(Sampler)
 export(Sampler1D)
 export(Sampler1DCateg)
+export(Sampler1DNormal)
 export(Sampler1DRfun)
-export(Sampler1DTruncNorm)
 export(Sampler1DUnif)
 export(SamplerHierarchical)
 export(SamplerJointIndep)
