assert_paramset -> assert_param_set

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,7 @@ export(SamplerHierarchical)
 export(SamplerJointIndep)
 export(SamplerUnif)
 export(assert_param)
-export(assert_paramset)
+export(assert_param_set)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
