--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,7 @@ export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
 import(checkmate)
-import(data.table, except = transpose)
+import(data.table)
 import(mlr3misc)
 importFrom(R6,R6Class)
 importFrom(stats,runif)
