--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: paradox
 Type: Package
-Title: Define and work with parameter spaces for complex algorithms
+Title: Define and Work with Parameter Spaces for Complex Algorithms
 Version: 0.1
 Authors@R: c(
     person("Jakob", "Richter", NULL, "code@jakob-r.de", role = c("cre", "aut")),
@@ -12,7 +12,7 @@ Description:
   Easily define parameter spaces, constraints and dependencies for
   arbitrary algorithms, to program on such spaces.
   Statistical designs and random samplers can be constructed.
-  paradox is a successor of the ParamHelpers package.
+  paradox is a successor of the 'ParamHelpers' package.
 License: MIT + file LICENSE
 URL: https://github.com/mlr-org/paradox
 BugReports: https://github.com/mlr-org/paradox/issues
