--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,8 @@ Imports:
 Suggests:
     lhs,
     testthat
+Remotes:
+    mlr-org/mlr3misc
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
