--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,7 @@ Description: Define parameter spaces, constraints and
     includes statistical designs and random samplers. Objects are implemented
     as 'R6' classes.
 License: LGPL-3
-URL: https://paradox.mlr-org.com
+URL: https://paradox.mlr-org.com, https://github.com/mlr-org/paradox
 BugReports: https://github.com/mlr-org/paradox/issues
 Imports:
     backports,
