--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(Sampler1DUnif)
 export(SamplerHierarchical)
 export(SamplerJointIndep)
 export(SamplerUnif)
+export(as.data.table)
 export(assert_param)
 export(assert_param_set)
 export(generate_design_grid)
