--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Type: Package
 Package: paradox
 Title: Define and Work with Parameter Spaces for Complex
     Algorithms
-Version: 0.1.0-9000
+Version: 0.2.0
 Authors@R:
     c(person(given = "Michel",
              family = "Lang",
