--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -75,5 +75,6 @@ Collate:
     'generate_design_grid.R'
     'generate_design_lhs.R'
     'generate_design_random.R'
+    'helper.R'
     'reexports.R'
     'zzz.R'
