--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,6 +65,7 @@ Collate:
     'ParamInt.R'
     'ParamLgl.R'
     'ParamSet.R'
+    'helper.R'
     'ParamSetCollection.R'
     'ParamUty.R'
     'Sampler.R'
@@ -76,6 +77,7 @@ Collate:
     'generate_design_grid.R'
     'generate_design_lhs.R'
     'generate_design_random.R'
-    'helper.R'
+    'ps.R'
     'reexports.R'
+    'tune.R'
     'zzz.R'
