--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(as.data.table,Param)
 S3method(as.data.table,ParamSet)
+S3method(print,Domain)
+S3method(print,TuneToken)
 S3method(rd_info,ParamSet)
 export(CondAnyOf)
 export(CondEqual)
@@ -32,6 +34,9 @@ export(assert_param_set)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
+export(p_int)
+export(ps)
+export(tune)
 import(checkmate)
 import(data.table)
 import(mlr3misc)
