--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 S3method(as.data.table,Param)
 S3method(as.data.table,ParamSet)
 S3method(print,Domain)
-S3method(print,TuneToken)
+S3method(print,FullTuneToken)
+S3method(print,ObjectTuneToken)
+S3method(print,RangeTuneToken)
 S3method(rd_info,ParamSet)
 export(CondAnyOf)
 export(CondEqual)
