--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -73,11 +73,12 @@ Collate:
     'SamplerJointIndep.R'
     'SamplerUnif.R'
     'asserts.R'
+    'helper.R'
+    'domain.R'
     'generate_design_grid.R'
     'generate_design_lhs.R'
     'generate_design_random.R'
-    'helper.R'
     'ps.R'
     'reexports.R'
-    'tune.R'
+    'to_tune.R'
     'zzz.R'
