--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,9 +36,13 @@ export(assert_param_set)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
+export(p_dbl)
+export(p_fct)
 export(p_int)
+export(p_lgl)
+export(p_uty)
 export(ps)
-export(tune)
+export(to_tune)
 import(checkmate)
 import(data.table)
 import(mlr3misc)
