import is.R6Class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,4 +47,5 @@ import(checkmate)
 import(data.table)
 import(mlr3misc)
 importFrom(R6,R6Class)
+importFrom(R6,is.R6Class)
 importFrom(stats,runif)
