--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Type: Package
 Package: paradox
 Title: Define and Work with Parameter Spaces for Complex
     Algorithms
-Version: 0.5.0
+Version: 0.5.0-9000
 Authors@R:
     c(person(given = "Michel",
              family = "Lang",
@@ -50,7 +50,9 @@ Imports:
 Suggests:
     knitr,
     lhs,
-    testthat
+    testthat,
+    bbotk,
+    mlr3tuning
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE, r6 = TRUE)
