--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,10 @@
 
 S3method(as.data.table,Param)
 S3method(as.data.table,ParamSet)
+S3method(print,Domain)
+S3method(print,FullTuneToken)
+S3method(print,ObjectTuneToken)
+S3method(print,RangeTuneToken)
 S3method(rd_info,ParamSet)
 export(CondAnyOf)
 export(CondEqual)
@@ -32,9 +36,17 @@ export(assert_param_set)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
+export(p_dbl)
+export(p_fct)
+export(p_int)
+export(p_lgl)
+export(p_uty)
+export(ps)
+export(to_tune)
 import(checkmate)
 import(data.table)
 import(mlr3misc)
 importFrom(R6,R6Class)
+importFrom(R6,is.R6Class)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
