link without suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,9 +50,7 @@ Imports:
 Suggests:
     knitr,
     lhs,
-    testthat,
-    bbotk,
-    mlr3tuning
+    testthat
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE, r6 = TRUE)
