--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as.data.table,Param)
 S3method(as.data.table,ParamSet)
 S3method(print,Domain)
 S3method(print,FullTuneToken)
+S3method(print,FunctionParamValue)
 S3method(print,ObjectTuneToken)
 S3method(print,RangeTuneToken)
 S3method(rd_info,ParamSet)
@@ -11,6 +12,7 @@ export(CondAnyOf)
 export(CondEqual)
 export(Condition)
 export(Design)
+export(FunctionParamValue)
 export(NO_DEF)
 export(NoDefault)
 export(Param)
