--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,5 +48,6 @@ import(data.table)
 import(mlr3misc)
 importFrom(R6,R6Class)
 importFrom(R6,is.R6Class)
+importFrom(methods,is)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
