--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ import(data.table)
 import(mlr3misc)
 importFrom(R6,R6Class)
 importFrom(R6,is.R6Class)
+importFrom(data.table,as.data.table)
 importFrom(methods,is)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
