--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Type: Package
 Package: paradox
 Title: Define and Work with Parameter Spaces for Complex
     Algorithms
-Version: 0.6.0-9000
+Version: 0.7.0
 Authors@R:
     c(person(given = "Michel",
              family = "Lang",
@@ -54,7 +54,7 @@ Suggests:
     testthat
 Encoding: UTF-8
 Config/testthat/edition: 3
-Config/testthat/parallel: true
+Config/testthat/parallel: false
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE, r6 = TRUE)
 RoxygenNote: 7.1.1
