--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Type: Package
 Package: paradox
 Title: Define and Work with Parameter Spaces for Complex
     Algorithms
-Version: 0.7.0-9000
+Version: 0.7.1
 Authors@R:
     c(person(given = "Michel",
              family = "Lang",
@@ -46,7 +46,7 @@ Imports:
     checkmate,
     data.table,
     methods,
-    mlr3misc (>= 0.5.0),
+    mlr3misc (>= 0.7.0),
     R6
 Suggests:
     knitr,
