ContextPV with more checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,17 @@
 
 S3method(as.data.table,Param)
 S3method(as.data.table,ParamSet)
+S3method(print,ContextPV)
 S3method(print,Domain)
 S3method(print,FullTuneToken)
-S3method(print,FunctionParamValue)
 S3method(print,ObjectTuneToken)
 S3method(print,RangeTuneToken)
 S3method(rd_info,ParamSet)
 export(CondAnyOf)
 export(CondEqual)
 export(Condition)
+export(ContextPV)
 export(Design)
-export(FunctionParamValue)
 export(NO_DEF)
 export(NoDefault)
 export(Param)
