feat: default_value() to extract default values from ParamSet

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,6 +76,7 @@ Collate:
     'SamplerJointIndep.R'
     'SamplerUnif.R'
     'asserts.R'
+    'default_values.R'
     'helper.R'
     'domain.R'
     'generate_design_grid.R'
