--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as.data.table,Param)
 S3method(as.data.table,ParamSet)
+S3method(default_values,ParamSet)
 S3method(print,Domain)
 S3method(print,FullTuneToken)
 S3method(print,ObjectTuneToken)
@@ -33,6 +34,7 @@ export(SamplerUnif)
 export(as.data.table)
 export(assert_param)
 export(assert_param_set)
+export(default_values)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
