--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Type: Package
 Package: paradox
 Title: Define and Work with Parameter Spaces for Complex
     Algorithms
-Version: 0.9.0.9000
+Version: 0.10.0
 Authors@R:
     c(person(given = "Michel",
              family = "Lang",
              role = c("cre", "aut"),
-             email = "michellang@gmail.com",
+             email = "sebf.fischer@gmail.com",
              comment = c(ORCID = "0000-0001-9754-0393")),
       person(given = "Bernd",
              family = "Bischl",
