--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
     c(person(given = "Michel",
              family = "Lang",
              role = c("cre", "aut"),
-             email = "sebf.fischer@gmail.com",
+             email = "michellang@gmail.com",
              comment = c(ORCID = "0000-0001-9754-0393")),
       person(given = "Bernd",
              family = "Bischl",
