--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(default_values)
 export(generate_design_grid)
 export(generate_design_lhs)
 export(generate_design_random)
+export(generate_design_sobol)
 export(p_dbl)
 export(p_fct)
 export(p_int)
