--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -14,6 +14,7 @@
 ^docs$
 ^README-.*\.png$
 ^README\.Rmd$
+^README\.html$
 ^attic$
 ^\.ccache$
 ^\.github$
@@ -21,3 +22,4 @@
 ^.travis.yml$
 ^.lintr$
 ^revdep$
+
