--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,6 +59,7 @@ Config/testthat/parallel: false
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE, r6 = TRUE)
 RoxygenNote: 7.2.3
+VignetteBuilder: knitr
 Collate:
     'Condition.R'
     'Design.R'
