--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Type: Package
-Package: tautology
+Package: paradox
 Title: Define and Work with Parameter Spaces for Complex
     Algorithms
 Version: 0.12.0
