--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,8 @@ export(p_int)
 export(p_lgl)
 export(p_uty)
 export(ps)
+export(ps_replicate)
+export(ps_union)
 export(psc)
 export(to_tune)
 import(checkmate)
