--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Type: Package
 Package: paradox
 Title: Define and Work with Parameter Spaces for Complex
     Algorithms
-Version: 0.12.0
+Version: 1.0.0
 Authors@R:
     c(person(given = "Michel",
              family = "Lang",
-             role = c("cre", "aut"),
+             role = "aut",
              email = "michellang@gmail.com",
              comment = c(ORCID = "0000-0001-9754-0393")),
       person(given = "Bernd",
@@ -26,7 +26,7 @@ Authors@R:
              comment = c(ORCID = "0000-0003-3269-2307")),
       person(given = "Martin",
              family = "Binder",
-             role = "aut",
+             role = c("aut", "cre"), 
              email = "mlr.developer@mb706.com"),
       person(given = "Marc",
              family = "Becker",
